2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

    * Add manpages for applygeo & geotifcp, also fix listgeo manpage. Patch by
    Bas Couwenberg

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

    * Don't install makegeo. makegeo.c serves as a minimal example of creating
    a geotiff file. Installing the executable has no value. Patch by
    Bas Couwenberg

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

    * Preparing 1.4.2 release.

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>
    * Fix warning about strcasecmp not found in -std=c99/cmake build

2016-01-13 Even Rouault <even dot rouault at spatialys dot com>
    * Upgrade to EPSG database v8.8

2016-01-11 Even Rouault <even dot rouault at spatialys dot com>
    * geo_normalize.c: remove dead code (KS CID 138299)

2016-01-08 Even Rouault <even dot rouault at spatialys dot com>
    * libgeotiff: fix likely false-positive null-ptr use
    (KS CID 138459), remove useless null ptr chec(KS CID 138299), add dummy
    checks for return value of GTIFKeyGetDOUBLE() (KS CID 138174),
    leak in error code path (KS CID 138952)

2016-01-07 Even Rouault <even dot rouault at spatialys dot com>
    *geo_print.c: a bit refactoring to avoid false positive warning from
    Coverity Scan about cast of negative value

2015-12-30 Even Rouault <even dot rouault at spatialys dot com>
    * ReadKey(): discard double key with invalid offset/count to prevent
    out-of-bounds read in GTIFKeyGet()

2015-12-21 Even Rouault <even dot rouault at spatialys dot com>
    *geo_simpletags.c: avoid Clang Static Analyzer warnings about potential
    malloc(0)

2015-12-20 Even Rouault <even dot rouault at spatialys dot com>
    * geo_print.c: comment out dead assignment with explicit FIXME

2015-12-20 Even Rouault <even dot rouault at spatialys dot com>
    * geo_write.c: fix mostly false positive warnings reported by clang static